--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: welcome to seykafu(kasey)'s personal portfolio page!
+description: Here I will cover my past experiences and projects in-depth.
