--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: welcome to seykafu(kasey)'s personal portfolio page!
+title: Welcome to Kasey's Portfolio!
 description: Here I will cover my past experiences and projects in-depth.
