--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-dinky
 title: Welcome to Kasey's Portfolio
 description: Here I will cover my past experiences and projects in-depth.
